# SDR_HDR

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  WEIGHTS_LICENSE.md  convert.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/plans/: 2026-03-03-sdr-hdr-design.md  2026-03-03-sdr-hdr-implementation.md
models/: nafnet.py  pu21.py  sde.py
pipeline/: colorspace.py  download.py  exr_writer.py  inference.py
tests/: test_colorspace.py  test_download.py  test_exr_writer.py  test_inference.py  test_pu21.py
