[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdr-hdr"
version = "1.3.0"
description = "Convert sRGB images to ACEScg half-float EXR with AI highlight reconstruction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Sascha Geddert", email = "sascha@geddart.de" }]
keywords = [
    "aces",
    "acescg",
    "hdr",
    "sdr",
    "exr",
    "openexr",
    "vfx",
    "color-management",
    "tone-mapping",
    "pytorch",
    "image-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "opencv-python",
    "numpy",
    "OpenEXR",
    "einops",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Geddart/SDR_HDR"
Repository = "https://github.com/Geddart/SDR_HDR"
Issues = "https://github.com/Geddart/SDR_HDR/issues"
Changelog = "https://github.com/Geddart/SDR_HDR/blob/master/CHANGELOG.md"

[project.scripts]
sdr-hdr = "convert:main"

[tool.setuptools]
py-modules = ["convert"]
packages = ["models", "pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
]
